--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ecommerce/sc-ecommerce/lib/openzeppelin-contracts"]
 	path = ecommerce/sc-ecommerce/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "Escrow/sc/lib/openzeppelin-contracts"]
+	path = Escrow/sc/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
